CB-24835 Improve the OS upgrade from CentOS to RHEL8
This commit contains the following changes:
- Improve image comparison for OS upgrade to compare the parcel versions as well. 
- When we're retrieving the upgrade candidates with the LATEST_ONLY option we need to list the latest RHEL8 image along with the CentOS images.